docs/samples/invalid/missing_semicolon_example.edl
// Expected error: missing semicolon after declaration.
let x: int = 10
print(x);
